Migrate from Java 8 to Java 17
- build.xml: Add release="17" to javac, add java9settings target with
  --add-opens java.base/java.util=ALL-UNNAMED, add JVM args to junit and
  java tasks, fix classpaths to include all lib jars, add fork="true" to
  hello target
- project.properties: Update commons-lang3 3.12.0->3.14.0, ivy 2.4.0->2.5.2,
  groovy 4.0.5->4.0.15, slf4j 2.0.3->2.0.9
- ivy.xml: Add groovy-ant and groovy-xml deps (split from main groovy jar in 4.x)
- Main.java: Fix raw types, update Velocity config to 2.x property names
- MainTest.java: Fix raw types
- java17migration.iml: Update JUnit 4.12->4.13.2, hamcrest-core 1.3->hamcrest 2.2
- README.md: Document all migration changes applied

Co-Authored-By: dilan.krishnamurthy <dilan.krishnamurthy@cognition.ai>